Resolve usage of constructors deprecated for removal
Use valueOf() instead.